--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "dreamhouse-web-app",
+  "name": "dhprod-doublem",
   "description": "DreamHouse Web App",
   "keywords": [
     "app-cloud"
