changes app name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "dreamhouse-web-app",
-  "description": "DreamHouse Web App",
+  "description": "DreamHouse Web Application",
   "keywords": [
     "app-cloud"
   ],
